# ChangeLog for sys-kernel/gentoo-sources
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.41 2003/12/01 21:59:51 iggy Exp $

  01 Dec 2003; Brian Jackson <iggy@gentoo.org>
  gentoo-sources-2.4.19-r10.ebuild, gentoo-sources-2.4.20-r5.ebuild,
  gentoo-sources-2.4.20-r6.ebuild, gentoo-sources-2.4.20-r7.ebuild,
  gentoo-sources-2.4.20-r8.ebuild, gentoo-sources-2.4.22.ebuild:
  fix do_brk vuln

*gentoo-sources-2.4.22 (01 Dec 2003)

  01 Dec 2003; Brian Jackson <iggy@gentoo.org> gentoo-sources-2.4.22.ebuild:
  added 2.4.22 version as ~x86, it's got one fix from the last
  gentoo-test-sources

  20 Nov 2003; Brandon Low <lostlogic@gentoo.org>
  gentoo-sources-2.4.19-r10.ebuild, gentoo-sources-2.4.20-r5.ebuild,
  gentoo-sources-2.4.20-r6.ebuild, gentoo-sources-2.4.20-r7.ebuild,
  gentoo-sources-2.4.20-r8.ebuild:
  Move version handling logic to after inherit kernel, or insert it where
  necessary

  17 Nov 2003; <plasmaroo@gentoo.org> gentoo-sources-2.4.20-r8.ebuild,
  files/gentoo-sources-2.4.20-ipt-route.patch: Added the new ROUTE patch 
  required to build iptables-1.2.9 properly.

*gentoo-sources-2.4.20-r8 (21 Oct 2003)

  21 Oct 2003; <plasmaroo@gentoo.org> gentoo-sources-2.4.20-r8.ebuild,
  files/gentoo-sources-2.4.20-grsec-datasize_fix.patch:
  Version bump. This release is mainly a "catch-up" for those who did not get
  the latest unbumped versions and also contains the grsecurity fix to fix
  negative memory counts. Thanks to <bartron@gmx.net> for the patch, Bug #25991

  19 Oct 2003; <plasmaroo@gentoo.org> gentoo-sources-2.4.20-r7.ebuild,
  files/gentoo-sources-2.4.20-ipt-realm.patch:
  Added a patch to fix the ipt_realm.c bugs we have floating around...

  11 Oct 2003; <plasmaroo@gentoo.org> gentoo-sources-2.4.20-r7.ebuild,
  files/gentoo-sources-2.4.20-cs46xx-gcc33.patch:
  Added CS46xx patch to fix the GCC 3.3 problems in the driver: Bug 29970
