@@ -1,0 +1,2 @@
+MD5 75dc85149b06ac9432106b8941eb9f7b linux-2.4.22.tar.bz2 29528612
+MD5 e249d31ed9ea7a45ddeea35b3757fba7 gentoo-sources-2.4.22-r1.patch.bz2 3361146
