@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/Attic/gentoo-sources-2.4.22.ebuild,v 1.3 2003/12/02 19:41:26 iggy Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/Attic/gentoo-sources-2.4.22-r1.ebuild,v 1.1 2003/12/02 19:41:26 iggy Exp $
 
 # OKV=original kernel version, KV=patched kernel version.  They can be the same.
 
@@ -37,7 +37,7 @@ src_unpack() {
 	bzcat ${DISTDIR}/gentoo-sources-${PVR}.patch.bz2 | patch -p1 \
 		|| die "Failed to patch kernel, please file a bug at bugs.gentoo.org"
 
-	epatch ${FILESDIR}/do_brk_fix.patch
+	#epatch ${FILESDIR}/do_brk_fix.patch
 
 	cd ${S}
 	make mrproper || die "make mrproper failed"
